<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_anasayfa"
            android:icon="@drawable/anasayfa"
            android:title="@string/menu_anasayfa" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/favori"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_ayarlar"
            android:icon="@drawable/settings"
            android:title="@string/menu_ayarlar" />
        <item
            android:id="@+id/nav_isletme"
            android:icon="@drawable/isletme"
            android:title="@string/menu_isletme" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_paylas"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_paylas" />
            <item
                android:id="@+id/nav_gonder"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_gonder" />
        </menu>
    </item>

</menu>
